5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4149/executions/1885_1654.log
== TEST (2019-07-09 10:29:17) 
-- CODE:
from numpy import*
s=input("entre")
a=.split(s,4)
print(a)
-- ERROR:
File "XXXX", line 3
    a=.split(s,4)
      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 10:29:28) 
-- CODE:
from numpy import*
s=input("entre")
a=.split(s)
print(a)
-- ERROR:
File "XXXX", line 3
    a=.split(s)
      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 10:29:51) 
-- CODE:
from numpy import*
s=input("entre")
a=.split("s")
print(a)
-- ERROR:
File "XXXX", line 3
    a=.split("s")
      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 10:30:45) 
-- CODE:
from numpy import*
s=input("entre")
a=.split(s",")
print(a)
-- ERROR:
File "XXXX", line 3
    a=.split(s",")
      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 10:30:48) 
-- CODE:
from numpy import*
s=input("entre")
a=.split(",")
print(a)
-- ERROR:
File "XXXX", line 3
    a=.split(",")
      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 10:31:04) 
-- CODE:
from numpy import*
s=input("entre")
a=s.split(",")
print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 10:31:51) 
-- CODE:
from numpy import*
s=input("entre")
a=s.split(s",")
print(a)
-- ERROR:
File "XXXX", line 3
    a=s.split(s",")
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 10:32:04) 
-- CODE:
from numpy import*
s=input("entre")
a=s.split(1,",")
print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 10:32:40) 
-- CODE:
from numpy import*
s=input("entre")
a=s.split()
print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 10:33:25) 
-- CODE:
from numpy import*
s=input(len(s)"entre")
a=s.split()
print(a)
-- ERROR:
File "XXXX", line 2
    s=input(len(s)"entre")
                        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 10:33:29) 
-- CODE:
from numpy import*
s=input(len(s),"entre")
a=s.split()
print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 10:33:56) 
-- CODE:
from numpy import*
s=input("entre")
a=s.split(len(s),",")
print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 10:34:15) 
-- CODE:
from numpy import*
s=input("entre")
a=s.split(a",")
print(a)
-- ERROR:
File "XXXX", line 3
    a=s.split(a",")
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 10:34:20) 
-- CODE:
from numpy import*
s=input("entre")
a=s.split(a,",")
print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 10:34:35) 
-- CODE:
from numpy import*
s=input("entre")
a=s.split(s,",")
print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 10:45:36) 
-- CODE:
from numpy import*
s=input("entre:")
a= s.split(",")
vet=zeros(4,dtype=int)
b=0

for i in range(size(a)):
	if(s[i]=="AM"):
		vet[0]=vet[0]+1
	
	elif(s[i]=="PE"):
		vet[1]==vet[1]+1
	elif(s[i]=="MG"):
		vet[2]==vet[2]+1
	elif(s[i]=="SP"):
		vet[3]==vet[3]+1
	elif(s[i]=="RS"):
		vet[4]==vet[4]+1
print(max(vet))	
print(vet)

		
		



a=s.split(",")


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 10:46:27) 
-- CODE:
from numpy import*
s=input("entre:")
a= s.split(",")
vet=zeros(4,dtype=int)

for i in range(len(s)):
	if(s[i]=="AM"):
		vet[0]=vet[0]+1
	elif(s[i]=="PE"):
		vet[1]==vet[1]+1
	elif(s[i]=="MG"):
		vet[2]==vet[2]+1
	elif(s[i]=="SP"):
		vet[3]==vet[3]+1
	elif(s[i]=="RS"):
		vet[4]==vet[4]+1
print(max(vet))	
print(vet)

		
		



a=s.split(",")


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 10:47:08) 
-- CODE:
from numpy import*
s=input("entre:")
a= s.split(",")
vet=zeros(4,dtype=int)

for i in range(len(s)):
	if(a[i]=="AM"):
		vet[0]=vet[0]+1
	elif(a[i]=="PE"):
		vet[1]==vet[1]+1
	elif(a[i]=="MG"):
		vet[2]==vet[2]+1
	elif(a[i]=="SP"):
		vet[3]==vet[3]+1
	elif(a[i]=="RS"):
		vet[4]==vet[4]+1
print(max(vet))	
print(vet)

		
		



a=s.split(",")


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 10:47:36) 
-- CODE:
from numpy import*
s=input("entre:")
a= s.split(",")
vet=zeros(5,dtype=int)

for i in range(len(s)):
	if(a[i]=="AM"):
		vet[0]=vet[0]+1
	elif(a[i]=="PE"):
		vet[1]==vet[1]+1
	elif(a[i]=="MG"):
		vet[2]==vet[2]+1
	elif(a[i]=="SP"):
		vet[3]==vet[3]+1
	elif(a[i]=="RS"):
		vet[4]==vet[4]+1
print(max(vet))	
print(vet)

		
		



a=s.split(",")


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 10:47:55) 
-- CODE:
from numpy import*
s=input("entre:")
a= s.split(",")
vet=zeros(5,dtype=int)

for i in range(len(s)):
	if(a[i]=="AM"):
		vet[0]=vet[0]+1
	elif(a[i]=="PE"):
		vet[1]==vet[1]+1
	elif(a[i]=="MG"):
		vet[2]==vet[2]+1
	elif(a[i]=="SP"):
		vet[3]==vet[3]+1
	elif(a[i]=="RS"):
		vet[4]==vet[4]+1
print(max(vet))	
print(vet)
		




-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 10:48:19) 
-- CODE:
from numpy import*
s=input("entre:")
a= s.split(",")
vet=zeros(5,dtype=int)

for i in range(size(a)):
	if(a[i]=="AM"):
		vet[0]=vet[0]+1
	elif(a[i]=="PE"):
		vet[1]==vet[1]+1
	elif(a[i]=="MG"):
		vet[2]==vet[2]+1
	elif(a[i]=="SP"):
		vet[3]==vet[3]+1
	elif(a[i]=="RS"):
		vet[4]==vet[4]+1
print(max(vet))	
print(vet)
		




-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 10:48:59) 
-- CODE:
from numpy import*
s=input("entre:")
a= s.split(",")
vet=zeros(5,dtype=int)
print(a)
for i in range(size(a)):
	if(a[i]=="AM"):
		vet[0]=vet[0]+1
	elif(a[i]=="PE"):
		vet[1]==vet[1]+1
	elif(a[i]=="MG"):
		vet[2]==vet[2]+1
	elif(a[i]=="SP"):
		vet[3]==vet[3]+1
	elif(a[i]=="RS"):
		vet[4]==vet[4]+1
print(max(vet))	
print(vet)
		




-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 10:49:44) 
-- CODE:
from numpy import*
s=input("entre:")
a= s.split()
vet=zeros(5,dtype=int)
print(a)
for i in range(size(a)):
	if(a[i]=="AM"):
		vet[0]=vet[0]+1
	elif(a[i]=="PE"):
		vet[1]==vet[1]+1
	elif(a[i]=="MG"):
		vet[2]==vet[2]+1
	elif(a[i]=="SP"):
		vet[3]==vet[3]+1
	elif(a[i]=="RS"):
		vet[4]==vet[4]+1
print(max(vet))	
print(vet)
		




-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 10:50:10) 
-- CODE:
from numpy import*
s=input("entre:")
a= s.split(",")
vet=zeros(5,dtype=int)
print(a)
for i in range(size(a)):
	if(a[i]=="AM"):
		vet[0]=vet[0]+1
	elif(a[i]=="PE"):
		vet[1]==vet[1]+1
	elif(a[i]=="MG"):
		vet[2]==vet[2]+1
	elif(a[i]=="SP"):
		vet[3]==vet[3]+1
	elif(a[i]=="RS"):
		vet[4]==vet[4]+1
print(max(vet))	
print(vet)
		




-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 10:50:27) 
-- CODE:
from numpy import*
s=input("entre:")
a= s.split(",")
vet=zeros(5,dtype=int)
print(a)
for i in range(size(a)):
	if(a[i]=="AM"):
		vet[0]=vet[0]+1
	elif(a[i]=="PE"):
		vet[1]==vet[1]+1
	elif(a[i]=="MG"):
		vet[2]==vet[2]+1
	elif(a[i]=="SP"):
		vet[3]==vet[3]+1
	elif(a[i]=="RS"):
		vet[4]==vet[4]+1
print(max(vet))	
print(vet)
		




-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 10:51:29) 
-- CODE:
from numpy import*
s=input("entre:")
a= s.split(",")
vet=zeros(5,dtype=int)

for i in range(size(a)):
	if(a[i]=="AM"):
		vet[0]=vet[0]+1
		print(a[i])
	elif(a[i]=="PE"):
		vet[1]==vet[1]+1
	elif(a[i]=="MG"):
		vet[2]==vet[2]+1
	elif(a[i]=="SP"):
		vet[3]==vet[3]+1
	elif(a[i]=="RS"):
		vet[4]==vet[4]+1
print(max(vet))	
print(vet)
		




-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 10:52:13) 
-- CODE:
from numpy import*
s=input("entre:")
a= s.split(",")
vet=zeros(5,dtype=int)
print(a[3])
for i in range(size(a)):
	if(a[i]=="AM"):
		vet[0]=vet[0]+1
		
	elif(a[i]=="PE"):
		vet[1]==vet[1]+1
	elif(a[i]=="MG"):
		vet[2]==vet[2]+1
	elif(a[i]=="SP"):
		vet[3]==vet[3]+1
	elif(a[i]=="RS"):
		vet[4]==vet[4]+1
print(max(vet))	
print(vet)
		




-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 10:53:19) 
-- CODE:
from numpy import*
s=input("entre:")
a= s.split(",")
vet=zeros(5,dtype=int)
print(a[3])
for i in range(size(a)):
	if(a[i]=="PE"):
		vet[0]=vet[0]+1
	elif(a[i]=="AM"):
		vet[1]==vet[1]+1
	elif(a[i]=="MG"):
		vet[2]==vet[2]+1
	elif(a[i]=="SP"):
		vet[3]==vet[3]+1
	elif(a[i]=="RS"):
		vet[4]==vet[4]+1
print(max(vet))	
print(vet)
		




-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 10:54:39) 
-- CODE:
from numpy import*
s=input("entre:")
a= s.split(",")
vet=zeros(5,dtype=int)
print(a[3])
for i in range(size(a)):
	if(a[i]=="SP"):
		vet[0]=vet[0]+1
	elif(a[i]=="AM"):
		vet[1]==vet[1]+1
	elif(a[i]=="MG"):
		vet[2]==vet[2]+1
	elif(a[i]=="PE"):
		vet[3]==vet[3]+1
	elif(a[i]=="RS"):
		vet[4]==vet[4]+1
print(max(vet))	
print(vet)
		




-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 10:56:15) 
-- CODE:
from numpy import*
s=input("entre:")
a= s.split(",")
vet=zeros(5,dtype=int)
print(a[3])
for i in range(size(a)):
	if(a[i]=="AM"):
		vet[0]=vet[0]+1
	elif(a[i]=="PE"):
		vet[1]==vet[1]+1
	elif(a[i]=="MG"):
		vet[2]==vet[2]+1
	elif(a[i]=="SP"):
		vet[3]==vet[3]+1
	elif(a[i]=="RS"):
		vet[4]==vet[4]+1
print(max(vet))	
print(vet)
		




-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 10:56:46) 
-- CODE:
from numpy import*
s=input("entre:")
a= s.split(",")
vet=zeros(5,dtype=int)
print(a[3])
for i in range(size(a)):
	if(a[i]=="AM"):
		vet[0]=vet[0]+1
	elif(a[i]=="PE"):
		vet[1]==vet[1]+1
	elif(a[i]=="MG"):
		vet[2]==vet[2]+1
	elif(a[i]=="SP"):
		vet[3]==vet[3]+1
	elif(a[i]=="RS"):
		vet[4]==vet[4]+1
print(max(vet))	
print(vet)
		




-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 10:58:52) 
-- CODE:
from numpy import*
s=input("entre:")
a= s.split(",")
vet=zeros(5,dtype=int)
print(a[3])
for i in range(size(a)):
	if(a[i]=="AM"):
		vet[0]=vet[0]+1
	elif(a[i]=="PE"):
		vet[1]==vet[1]+1
	
print(max(vet))	
print(vet)
		




-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 10:59:26) 
-- CODE:
from numpy import*
s=input("entre:")
a= s.split(",")
vet=zeros(5,dtype=int)
print(a[3])
for i in range(size(a)):
	if(a[i-1]=="AM"):
		vet[0]=vet[0]+1
	elif(a[i]=="PE"):
		vet[1]==vet[1]+1
	
print(max(vet))	
print(vet)
		




-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 10:59:35) 
-- CODE:
from numpy import*
s=input("entre:")
a= s.split(",")
vet=zeros(5,dtype=int)
print(a[3])
for i in range(size(a)):
	if(a[i-1]=="AM"):
		vet[0]=vet[0]+1
	elif(a[i-1]=="PE"):
		vet[1]==vet[1]+1
	
print(max(vet))	
print(vet)
		




-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 11:00:57) 
-- CODE:
from numpy import*
s=input("entre:")
a= s.split(",")
vet=zeros(5,dtype=int)
print(a[3])
for i in range(size(a)):
	if(a[i]=="AM"):
		vet[0]=vet[0]+1
for i in range(size(a)):	
	if(a[i]=="PE"):
		vet[1]==vet[1]+1
	elif(a[i]=="MG"):
		vet[2]==vet[2]+1
	elif(a[i]=="SP"):
		vet[3]==vet[3]+1
	elif(a[i]=="RS"):
		vet[4]==vet[4]+1
print(max(vet))	
print(vet)
		




-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 11:01:32) 
-- CODE:
from numpy import*
s=input("entre:")
a= s.split(",")
vet=zeros(5,dtype=int)
print(a[3])
for i in range(len(s)):
	if(a[i]=="AM"):
		vet[0]=vet[0]+1
for i in range(size(a)):	
	if(a[i]=="PE"):
		vet[1]==vet[1]+1
	elif(a[i]=="MG"):
		vet[2]==vet[2]+1
	elif(a[i]=="SP"):
		vet[3]==vet[3]+1
	elif(a[i]=="RS"):
		vet[4]==vet[4]+1
print(max(vet))	
print(vet)
		




-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 11:01:55) 
-- CODE:
from numpy import*
s=input("entre:")
a= s.split(",")
vet=zeros(5,dtype=int)
print(a[3])
for i in range(len(s)):
	if(a[i]=="AM"):
		vet[0]=vet[0]+1
for i in range(len(s)):	
	if(a[i]=="PE"):
		vet[1]==vet[1]+1
	elif(a[i]=="MG"):
		vet[2]==vet[2]+1
	elif(a[i]=="SP"):
		vet[3]==vet[3]+1
	elif(a[i]=="RS"):
		vet[4]==vet[4]+1
print(max(vet))	
print(vet)
		




-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 11:02:26) 
-- CODE:
from numpy import*
s=input("entre:")
a= s.split(",")
vet=zeros(5,dtype=int)
print(a[3])
for i in range(9):
	if(a[i]=="AM"):
		vet[0]=vet[0]+1
for i in range(len(s)):	
	if(a[i]=="PE"):
		vet[1]==vet[1]+1
	elif(a[i]=="MG"):
		vet[2]==vet[2]+1
	elif(a[i]=="SP"):
		vet[3]==vet[3]+1
	elif(a[i]=="RS"):
		vet[4]==vet[4]+1
print(max(vet))	
print(vet)
		




-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 11:02:43) 
-- CODE:
from numpy import*
s=input("entre:")
a= s.split(",")
vet=zeros(5,dtype=int)
print(a[3])
for i in range(9):
	if(a[i]=="AM"):
		vet[0]=vet[0]+1	
	elif(a[i]=="PE"):
		vet[1]==vet[1]+1
	elif(a[i]=="MG"):
		vet[2]==vet[2]+1
	elif(a[i]=="SP"):
		vet[3]==vet[3]+1
	elif(a[i]=="RS"):
		vet[4]==vet[4]+1
print(max(vet))	
print(vet)
		




-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 11:04:16) 
-- CODE:
from numpy import*
s=input("entre:")
a= s.split(",")
vet=zeros(5,dtype=int)

for i in range(size(a)):
	if(a[i]=="AM"):
		vet[0]=vet[0]+1
for j in range(size(a))		
	elif(a[j]=="PE"):
		vet[1]==vet[1]+1
	elif(a[i]=="MG"):
		vet[2]==vet[2]+1
	elif(a[i]=="SP"):
		vet[3]==vet[3]+1
	elif(a[i]=="RS"):
		vet[4]==vet[4]+1
print(max(vet))	
print(vet)
		




-- ERROR:
File "XXXX", line 9
    for j in range(size(a))		
                            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 11:04:24) 
-- CODE:
from numpy import*
s=input("entre:")
a= s.split(",")
vet=zeros(5,dtype=int)

for i in range(size(a)):
	if(a[i]=="AM"):
		vet[0]=vet[0]+1
for j in range(size(a))		
	if(a[j]=="PE"):
		vet[1]==vet[1]+1
	elif(a[i]=="MG"):
		vet[2]==vet[2]+1
	elif(a[i]=="SP"):
		vet[3]==vet[3]+1
	elif(a[i]=="RS"):
		vet[4]==vet[4]+1
print(max(vet))	
print(vet)
		




-- ERROR:
File "XXXX", line 9
    for j in range(size(a))		
                            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 11:04:31) 
-- CODE:
from numpy import*
s=input("entre:")
a= s.split(",")
vet=zeros(5,dtype=int)

for i in range(size(a)):
	if(a[i]=="AM"):
		vet[0]=vet[0]+1
for j in range(size(a)):	
	if(a[j]=="PE"):
		vet[1]==vet[1]+1
	elif(a[i]=="MG"):
		vet[2]==vet[2]+1
	elif(a[i]=="SP"):
		vet[3]==vet[3]+1
	elif(a[i]=="RS"):
		vet[4]==vet[4]+1
print(max(vet))	
print(vet)
		




-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 11:05:21) 
-- CODE:
from numpy import*
s=input("entre:")
a= s.split(",")
vet=zeros(5,dtype=int)

for i in range(size(a)):
	if(a[i]=="AM"):
		vet[1]=vet[0]+1
for j in range(size(a)):	
	if(a[j]=="PE"):
		vet[2]==vet[1]+1
	elif(a[i]=="MG"):
		vet[2]==vet[2]+1
	elif(a[i]=="SP"):
		vet[3]==vet[3]+1
	elif(a[i]=="RS"):
		vet[4]==vet[4]+1
print(max(vet))	
print(vet)
		




-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 11:07:29) 
-- CODE:
from numpy import*
s=input("entre:")
a= s.split(",")
vet=zeros(5,dtype=int)

while(i<size(a)):
	if(a[i]=="AM"):
		vet[0]=vet[0]+1

	elif(a[i]=="PE"):
		
		vet[1]==vet[1]+1
		
	elif(a[i]=="MG"):
		
		vet[2]==vet[2]+1
		
	elif(a[i]=="SP"):
		
		vet[3]==vet[3]+1
		
	elif(a[i]=="RS"):
		
		vet[4]==vet[4]+1
	i=i+1	
print(max(vet))

print(vet)
		




-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 11:07:40) 
-- CODE:
from numpy import*
s=input("entre:")
a= s.split(",")
vet=zeros(5,dtype=int)
i=0
while(i<size(a)):
	if(a[i]=="AM"):
		vet[0]=vet[0]+1

	elif(a[i]=="PE"):
		
		vet[1]==vet[1]+1
		
	elif(a[i]=="MG"):
		
		vet[2]==vet[2]+1
		
	elif(a[i]=="SP"):
		
		vet[3]==vet[3]+1
		
	elif(a[i]=="RS"):
		
		vet[4]==vet[4]+1
	i=i+1	
print(max(vet))

print(vet)
		




-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 11:09:19) 
-- CODE:
from numpy import*
s=input("entre:")
a= s.split(",")
vet=zeros(5,dtype=int)

for i in range(9949)
	if(a[i]=="AM"):
		vet[0]=vet[0]+1

	elif(a[i]=="PE"):

		vet[1]==vet[1]+1

	elif(a[i]=="MG"):

		vet[2]==vet[2]+1

	elif(a[i]=="SP"):

		vet[3]==vet[3]+1

	elif(a[i]=="RS"):

		vet[4]==vet[4]+1

print(max(vet))

print(vet)
		




-- ERROR:
File "XXXX", line 6
    for i in range(9949)
                       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 11:09:28) 
-- CODE:
from numpy import*
s=input("entre:")
a= s.split(",")
vet=zeros(5,dtype=int)

for i in range(990)
	if(a[i]=="AM"):
		vet[0]=vet[0]+1

	elif(a[i]=="PE"):

		vet[1]==vet[1]+1

	elif(a[i]=="MG"):

		vet[2]==vet[2]+1

	elif(a[i]=="SP"):

		vet[3]==vet[3]+1

	elif(a[i]=="RS"):

		vet[4]==vet[4]+1

print(max(vet))

print(vet)
		




-- ERROR:
File "XXXX", line 6
    for i in range(990)
                      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 11:09:33) 
-- CODE:
from numpy import*
s=input("entre:")
a= s.split(",")
vet=zeros(5,dtype=int)

for i in range(10)
	if(a[i]=="AM"):
		vet[0]=vet[0]+1

	elif(a[i]=="PE"):

		vet[1]==vet[1]+1

	elif(a[i]=="MG"):

		vet[2]==vet[2]+1

	elif(a[i]=="SP"):

		vet[3]==vet[3]+1

	elif(a[i]=="RS"):

		vet[4]==vet[4]+1

print(max(vet))

print(vet)
		




-- ERROR:
File "XXXX", line 6
    for i in range(10)
                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 11:09:44) 
-- CODE:
from numpy import*
s=input("entre:")
a= s.split(",")
vet=zeros(5,dtype=int)

for i in range(109859):
	if(a[i]=="AM"):
		vet[0]=vet[0]+1

	elif(a[i]=="PE"):

		vet[1]==vet[1]+1

	elif(a[i]=="MG"):

		vet[2]==vet[2]+1

	elif(a[i]=="SP"):

		vet[3]==vet[3]+1

	elif(a[i]=="RS"):

		vet[4]==vet[4]+1

print(max(vet))

print(vet)
		




-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-09 11:09:46) 
-- CODE:
from numpy import*
s=input("entre:")
a= s.split(",")
vet=zeros(5,dtype=int)

for i in range(10):
	if(a[i]=="AM"):
		vet[0]=vet[0]+1

	elif(a[i]=="PE"):

		vet[1]==vet[1]+1

	elif(a[i]=="MG"):

		vet[2]==vet[2]+1

	elif(a[i]=="SP"):

		vet[3]==vet[3]+1

	elif(a[i]=="RS"):

		vet[4]==vet[4]+1

print(max(vet))

print(vet)
		




-- EXECUTION TIME:
1.95235
-- TEST CASE 1:
---- input:
PE,MG,MG,SP,PE,SP,MG,MG,MG,MG,AM,AM,RS,SP,RS,AM,AM,PE,MG,RS
---- correct output:
7
[4 3 7 3 3]
---- user output:
0
[0 0 0 0 0]
-- TEST CASE 2:
---- input:
MG,RS,PE,SP,PE,PE,MG,MG,MG,AM,RS
---- correct output:
4
[1 3 4 1 2]
---- user output:
1
[1 0 0 0 0]
-- TEST CASE 3:
---- input:
SP,MG,AM,PE,MG,MG,MG,AM,MG,PE,RS
---- correct output:
5
[2 2 5 1 1]
---- user output:
entre:
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-09 11:09:46) 
-- CODE:
from numpy import*
s=input("entre:")
a= s.split(",")
vet=zeros(5,dtype=int)

for i in range(10):
	if(a[i]=="AM"):
		vet[0]=vet[0]+1

	elif(a[i]=="PE"):

		vet[1]==vet[1]+1

	elif(a[i]=="MG"):

		vet[2]==vet[2]+1

	elif(a[i]=="SP"):

		vet[3]==vet[3]+1

	elif(a[i]=="RS"):

		vet[4]==vet[4]+1

print(max(vet))

print(vet)
		




-- EXECUTION TIME:
2.6734
-- TEST CASE 1:
---- input:
PE,MG,MG,SP,PE,SP,MG,MG,MG,MG,AM,AM,RS,SP,RS,AM,AM,PE,MG,RS
---- correct output:
7
[4 3 7 3 3]
---- user output:
0
[0 0 0 0 0]
-- TEST CASE 2:
---- input:
MG,RS,PE,SP,PE,PE,MG,MG,MG,AM,RS
---- correct output:
4
[1 3 4 1 2]
---- user output:
1
[1 0 0 0 0]
-- TEST CASE 3:
---- input:
SP,MG,AM,PE,MG,MG,MG,AM,MG,PE,RS
---- correct output:
5
[2 2 5 1 1]
---- user output:
entre:
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 11:09:58) 
-- CODE:
from numpy import*
s=input("entre:")
a= s.split(",")
vet=zeros(5,dtype=int)

for i in range(109):
	if(a[i]=="AM"):
		vet[0]=vet[0]+1

	elif(a[i]=="PE"):

		vet[1]==vet[1]+1

	elif(a[i]=="MG"):

		vet[2]==vet[2]+1

	elif(a[i]=="SP"):

		vet[3]==vet[3]+1

	elif(a[i]=="RS"):

		vet[4]==vet[4]+1

print(max(vet))

print(vet)
		




-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 11:10:21) 
-- CODE:
from numpy import*
s=input("entre:")
a= s.split(",")
vet=zeros(5,dtype=int)

for i in range(size(a)):
	if(a[i]=="AM"):
		vet[0]=vet[0]+1

	elif(a[i]=="PE"):

		vet[1]==vet[1]+1

	elif(a[i]=="MG"):

		vet[2]==vet[2]+1

	elif(a[i]=="SP"):

		vet[3]==vet[3]+1

	elif(a[i]=="RS"):

		vet[4]==vet[4]+1

print(max(vet))

print(vet)
		




-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 11:11:05) 
-- CODE:
from numpy import*
s=input("entre:")
a= s.split(",")
vet=zeros(5,dtype=int)
print(a)
for i in range(size(a)):
	if(a[i]=="AM"):
		vet[0]=vet[0]+1

	elif(a[i]=="PE"):

		vet[1]==vet[1]+1

	elif(a[i]=="MG"):

		vet[2]==vet[2]+1

	elif(a[i]=="SP"):

		vet[3]==vet[3]+1

	elif(a[i]=="RS"):

		vet[4]==vet[4]+1

print(max(vet))

print(vet)
		




-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 11:11:49) 
-- CODE:
from numpy import*
s=input("entre:")
a= s.split(",")
vet=zeros(5,dtype=int)
print(a)
for i in range(size(a)):
	if(a[i]=="AM"):
		vet[0]=vet[0]+1

	elif(a[i]=="PE"):

		vet[1]==vet[1]+1

	elif(a[i]=="MG"):

		vet[2]==vet[2]+1

	elif(a[i]=="SP"):

		vet[3]==vet[3]+1

	elif(a[i]=="RS"):

		vet[4]==vet[4]+1

print(max(vet))

print(vet)
		




-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 11:12:13) 
-- CODE:
from numpy import*
s=input("entre:")
a= s.split(",")
vet=zeros(5,dtype=int)
print(a)
for i in range(size(a)):
	if(a[i]=="AM"):
		vet[i]=vet[0]+1

	elif(a[i]=="PE"):

		vet[1]==vet[1]+1

	elif(a[i]=="MG"):

		vet[2]==vet[2]+1

	elif(a[i]=="SP"):

		vet[3]==vet[3]+1

	elif(a[i]=="RS"):

		vet[4]==vet[4]+1

print(max(vet))

print(vet)
		




-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 11:13:03) 
-- CODE:
from numpy import*
s=input("entre:")
a= s.split(",")
vet=zeros(5,dtype=int)
print(a)
for i in range(size(a)):
	if(a[i]=="AM"):
		vet[0]=vet+1

	elif(a[i]=="PE"):

		vet[1]==vet[1]+1

	elif(a[i]=="MG"):

		vet[2]==vet[2]+1

	elif(a[i]=="SP"):

		vet[3]==vet[3]+1

	elif(a[i]=="RS"):

		vet[4]==vet[4]+1

print(max(vet))

print(vet)
		




-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 11:13:33) 
-- CODE:
from numpy import*
from numpy.linalg import*
s=input("entre:")
a= s.split(",")
vet=zeros(5,dtype=int)
print(a)
for i in range(size(a)):
	if(a[i]=="AM"):
		vet[0]=vet+1

	elif(a[i]=="PE"):

		vet[1]==vet[1]+1

	elif(a[i]=="MG"):

		vet[2]==vet[2]+1

	elif(a[i]=="SP"):

		vet[3]==vet[3]+1

	elif(a[i]=="RS"):

		vet[4]==vet[4]+1

print(max(vet))

print(vet)
		




-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 11:13:41) 
-- CODE:
from numpy import*
from numpy.linalg import*
s=input("entre:")
a= s.split(",")
vet=zeros(5,dtype=int)
print(a)
for i in range(size(a)):
	if(a[i]=="AM"):
		vet[0]=vet[0]+1

	elif(a[i]=="PE"):

		vet[1]==vet[1]+1

	elif(a[i]=="MG"):

		vet[2]==vet[2]+1

	elif(a[i]=="SP"):

		vet[3]==vet[3]+1

	elif(a[i]=="RS"):

		vet[4]==vet[4]+1

print(max(vet))

print(vet)
		




-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 11:16:59) 
-- CODE:
from numpy import*
from numpy.linalg import*
s=input("entre:")
a= s.split(",")
vet=zeros(5,dtype=int)
vet2=zeros(5,dtype=int)
for i in range(size(a)):
	if(a[i]=="AM"):
		vet[0]=vet[0]+1
for x in range(size(a)):
	if(a[x]=='PE'):
		vet2[1]=vet2[1]+1

d=vet+vet2
print(d)

		




-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 11:17:48) 
-- CODE:
from numpy import*
from numpy.linalg import*
s=input("entre:")
a= s.split(",")
vet=zeros(5,dtype=int)
vet2=zeros(5,dtype=int)
for i in range(size(a)):
	if(a[i]=="AM"):
		vet[0]=vet[0]+1
for i in range(size(a)):
	if(a[i]=='PE'):
		vet2[1]=vet2[1]+1
		
d=vet+vet2
print(d)



		




-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 11:24:42) 
-- CODE:
from numpy import*
from numpy.linalg import*
s=input("entre:")
a= s.split(",")
vet=zeros(5,dtype=int)
vet1=zeros(5,dtype=int)
vet2=zeros(5,dtype=int)
vet3=zeros(5,dtype=int)
vet4=zeros(5,dtype=int)

for i in range(size(a)):
	if(a[i]=="AM"):
		vet[0]=vet[0]+1
for i in range(size(a)):
	if(a[i]=='PE'):
		vet1[1]=vet2[1]+1
for i in range(size(a)):
	if(a[i]=="MG"):
		vet2[2]=vet3[2]+1
for i in range(size(a)):
	if(a[i]=="SP"):
		vet3[3]=vet3[3]+1
for i in range(size(a)):
	if(a[i]=="RS"):
		vet4[4]=vet4[4]+1
		
d=vet+vet1+vet2+vet3+vet4
print(max(d))
print(d)



		




-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 11:26:10) 
-- CODE:
from numpy import*
from numpy.linalg import*
s=input("entre:")
a= s.split(",")
vet=zeros(5,dtype=int)
vet1=zeros(5,dtype=int)
vet2=zeros(5,dtype=int)
vet3=zeros(5,dtype=int)
vet4=zeros(5,dtype=int)

for i in range(size(a)):
	if(a[i]=="AM"):
		vet[0]=vet[0]+1
for i in range(size(a)):
	if(a[i]=='PE'):
		vet1[1]=vet1[1]+1
for i in range(size(a)):
	if(a[i]=="MG"):
		vet2[2]=vet2[2]+1
for i in range(size(a)):
	if(a[i]=="SP"):
		vet3[3]=vet3[3]+1
for i in range(size(a)):
	if(a[i]=="RS"):
		vet4[4]=vet4[4]+1
		
d=vet+vet1+vet2+vet3+vet4
print(max(d))
print(d)



		




-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-09 11:26:19) 
-- CODE:
from numpy import*
from numpy.linalg import*
s=input("entre:")
a= s.split(",")
vet=zeros(5,dtype=int)
vet1=zeros(5,dtype=int)
vet2=zeros(5,dtype=int)
vet3=zeros(5,dtype=int)
vet4=zeros(5,dtype=int)

for i in range(size(a)):
	if(a[i]=="AM"):
		vet[0]=vet[0]+1
for i in range(size(a)):
	if(a[i]=='PE'):
		vet1[1]=vet1[1]+1
for i in range(size(a)):
	if(a[i]=="MG"):
		vet2[2]=vet2[2]+1
for i in range(size(a)):
	if(a[i]=="SP"):
		vet3[3]=vet3[3]+1
for i in range(size(a)):
	if(a[i]=="RS"):
		vet4[4]=vet4[4]+1
		
d=vet+vet1+vet2+vet3+vet4
print(max(d))
print(d)



		




-- EXECUTION TIME:
1.02188
-- TEST CASE 1:
---- input:
PE,MG,MG,SP,PE,SP,MG,MG,MG,MG,AM,AM,RS,SP,RS,AM,AM,PE,MG,RS
---- correct output:
7
[4 3 7 3 3]
---- user output:
7
[4 3 7 3 3]
-- TEST CASE 2:
---- input:
MG,RS,PE,SP,PE,PE,MG,MG,MG,AM,RS
---- correct output:
4
[1 3 4 1 2]
---- user output:
4
[1 3 4 1 2]
-- TEST CASE 3:
---- input:
SP,MG,AM,PE,MG,MG,MG,AM,MG,PE,RS
---- correct output:
5
[2 2 5 1 1]
---- user output:
5
[2 2 5 1 1]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
